--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/spotlight.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/spotlight.html.twig
@@ -20,7 +20,7 @@
                 <label for="end">Max</label>
                 <input type="number" class="form-control" name="end" id="end" placeholder="end" value="{{ filters.end }}">
             </fieldset>
-            <div class="checkbox">
+            <!--<div class="checkbox">
                 <label>
                     {% if filters.start >= 1 %}
                     <input type="checkbox" name="start" value="1" checked> Show only spotlighted
@@ -28,7 +28,7 @@
                     <input type="checkbox" name="start" value="1"> Show only spotlighted
                     {% endif %}
                 </label>
-            </div>
+            </div>-->
             <fieldset class="form-group">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </fieldset>
