--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/recommend.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/recommend.html.twig
@@ -74,14 +74,11 @@
                                 {% set existItem = 1 %}
                             {% endif %}
                         {% endfor %}
-                        {% if existItem == 0 %}
-                            0
-                        {% endif %}
-                        {% if artist.recommends|length < 1 %}
+                        {% if artist.recommends|length < 1 or existItem == 0%}
                             0
                         {% endif %}
                         </span>
-                        {% if artist.recommends|length < 1 %}
+                        {% if artist.recommends|length < 1 or existItem == 0 %}
                             <input type="number" class="recommendedInput" placeholder="0">
                         {% endif %}
                         {% for recommended in artist.recommends %}
@@ -89,9 +86,6 @@
                                 <input type="number" class="recommendedInput" value="{{ recommended.value }}">
                             {% endif %}
                         {% endfor %}
-                        {% if existItem == 0 %}
-                            <input type="number" class="recommendedInput" placeholder="0">
-                        {% endif %}
 
                     </td>
                     <td>
