--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/parts/header-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/parts/header-retina.css
@@ -609,3 +609,19 @@ header.small .navbar {
         height: 56px;
     }
 }
+
+.header-background .set-background {
+    position: absolute;
+    right: 5%;
+    top: 15%;
+    background: none;
+    font-size: 16px;
+    border: none;
+    margin: 0;
+    color: #fff;
+    cursor: pointer;
+    padding: 0;
+    width: 16px;
+    height: 16px;
+    text-align: center;
+}
