--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -11445,3 +11445,8 @@ a.disabled {
 {
     display: none;
 }
+.media-content.video .holder {
+    width: 70%;
+    margin: 0 auto 15px;
+    height: 480px;
+}
