--- a/web/css/style-retina.css
+++ b/web/css/style-retina.css
@@ -11857,3 +11857,8 @@ a.disabled {
 {
     right: 0 !important;
 }
+.media-content.video .holder {
+    width: 70%;
+    margin: 0 auto 15px;
+    height: 420px;
+}
