M7 fixes: Fixed performance status change if publish, line breake in performances, link to chat from messages

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -30,9 +30,9 @@
 
                         <div class="info">
                             <div class="box">
-                                <p>
+                                <pre>
                                     {{ performance.techRequirement }}
-                                </p>
+                                </pre>
                             </div>
 
                             <div class="controls">
