--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -103,9 +103,9 @@
 
                             <div class="info">
                                 <div class="box">
-                                    <p class="perfNotEditing">
-                                        {{ performance.techRequirement }}
-                                    </p>
+                                    <pre class="perfNotEditing">
+                                        <!-- -->{{ performance.techRequirement }}
+                                    </pre>
                                     <textarea class="description-area" placeholder="Write your description">{{ performance.techRequirement }}</textarea>
                                 </div>
 
