--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -3138,3 +3138,22 @@ a.disabled {
     margin: 0 auto 15px;
     height: 480px;
 }
+
+.price-list .item .info pre {
+    margin: 0 0 10px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-size: 16px;
+    font-family: LatoRegular;
+    color: #636363;
+    word-break: normal;
+    max-height: 196px;
+    overflow-y: auto;
+    white-space: pre-line;
+}
+.price-list .info .box
+{
+    overflow: hidden;
+}
+
