--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -3228,7 +3228,7 @@ a.disabled {
 .price-list .video iframe {
     z-index: 1;
     position: relative;
-    height: 297px;
+    height: 222px;
 }
 .price-list .controls.add
 {
@@ -3292,4 +3292,22 @@ a.disabled {
     width: 70%;
     margin: 0 auto 15px;
     height: 420px;
+}
+
+.price-list .item .info pre {
+    margin: 0 0 10px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-size: 16px;
+    font-family: LatoRegular;
+    color: #636363;
+    word-break: normal;
+    max-height: 196px;
+    overflow-y: auto;
+    white-space: pre-line;
+}
+.price-list .info .box
+{
+    overflow: hidden;
 }
