Fix thumbnails position, add line breaks in profile biography

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/profile_edit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/profile_edit.html.twig
@@ -8,7 +8,7 @@
     <section class="price-list">
 {% include 'ActedLegalDocsBundle:Profile:ordersSectionEdit.html.twig' %}
     </section>
-{% include 'ActedLegalDocsBundle:Profile:biographySection.html.twig' %}
+{% include 'ActedLegalDocsBundle:Profile:biographySectionEdit.html.twig' %}
 
     <section id="feedbacks" class="profile-block feedbacks">
         <div class="title">
