--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/biographySection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/biographySection.html.twig
@@ -1,13 +1,6 @@
 <section id="biography" class="profile-block biography">
-    {% if is_granted('EDIT', artist) %}
-    <div class="title"><span>Biography</span><div id="editBiography" class=""><i class="fa fa-pencil-square-o"></i></div></div>
-    <p id="biographyEditable" data-type="textarea" data-pk="{{ artist.id }}" data-title="">
+    <div class="title"><span>Biography</span></div>
+    <pre>
         {{ artist.user.profile.description }}
-    </p>
-    {% else %}
-        <div class="title"><span>Biography</span></div>
-    <p>
-        {{ artist.user.profile.description }}
-    </p>
-    {% endif %}
+    </pre>
 </section>
