--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
@@ -60,7 +60,7 @@
                 <ul class="bxVideoSlider">
                     {% for video in artist.user.profile.videoList %}
                         <li id="imageSlider{{ video.videoId }}">
-                            <iframe src="{{ video.link }}" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></li>
+                            <iframe id="{{ video.videoId }}" src="{{ video.link }}" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></li>
                     {% endfor %}
                 </ul>
             </div>
@@ -79,7 +79,7 @@
             <div class="audioBlock">
             {% for audio in artist.user.profile.audioList %}
                 <div class="audioEditProfile">
-                    <iframe width="100%" height="150" scrolling="no" frameborder="no" src="{{ audio.link }}"></iframe>
+                    <iframe id="{{ audio.id }}" width="100%" height="150" scrolling="no" frameborder="no" src="{{ audio.link }}"></iframe>
                 </div>
             {% endfor %}
             </div>
