--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSectionEdit.html.twig
@@ -97,7 +97,7 @@
 
             <ul class="bxVideoSlider">
                 {% for video in artist.user.profile.videoList %}
-                    <li id="imageSlider{{ video.videoId }}"><iframe src="{{ video.link }}" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></li>
+                    <li id="imageSlider{{ video.videoId }}"><iframe id="{{ video.videoId }}" src="{{ video.link }}" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></li>
                 {% endfor %}
             </ul>
             </div>
@@ -129,7 +129,7 @@
                     {% if is_granted('EDIT', artist) %}
                         <span class="removeNewAudio deleteMedia" id="{{ audio.id }}"><i class="fa fa-times-circle-o"></i></span>
                     {% endif %}
-                    <iframe width="100%" height="150" scrolling="no" frameborder="no" src="{{ audio.link }}"></iframe>
+                    <iframe id="{{ audio.id }}" width="100%" height="150" scrolling="no" frameborder="no" src="{{ audio.link }}"></iframe>
                 </div>
             {% endfor %}
             </div>
