--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
@@ -12,6 +12,17 @@
                 <label for="querySearch">Search</label>
                 <input type="text" class="form-control" name="query" id="querySearch" placeholder="Search" value="{{ filters.query }}">
             </fieldset>
+            <select class="form-control" id="catMainSel" name="main">
+                <option value="all" selected="selected">All role</option>
+                <option value="client">Client</option>
+                <option value="artist">Artist</option>
+                <option value="admin">Admin</option>
+            </select><br>
+            <select class="form-control" id="catMainSel" name="main">
+                <option value="all" selected="selected">All</option>
+                <option value="isTemporary">Is temporary</option>
+                <option value="notTemporary">Not temporary</option>
+            </select><br>
             <fieldset class="form-group">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </fieldset>
@@ -26,6 +37,7 @@
                     <th>Slug</th>
                     <th>email</th>
                     <th>active</th>
+                    <th>temporary</th>
                     <th>Action</th>
                 </tr>
                 </thead>
@@ -33,9 +45,19 @@
                 {% for user in users %}
                     <tr id="{{ user.id }}">
                         <td>{{ user.id }}</td>
-                        <td>{{ user.artist.slug }}</td>
+                        {% if user.artist is defined %}
+                            <td>{{ user.artist.slug }}</td>
+                        {% else %}
+                            <td>client</td>
+                        {% endif %}
                         <td>{{ user.email }}</td>
-                        <td>{{ user.active }}</td>
+                        <td>
+                            <input id="active-{{ user.id }}" type="checkbox" {% if user.active %}checked{% endif %}>
+                        </td>
+                        <td>
+                            <input id="temporary-{{ user.id }}" type="checkbox" {% if user.temporary %}checked{% endif
+                            %}>
+                        </td>
                         <td>
                             <a href="#"><button type="button" class="btn btn-info manageSpotlight">Manage</button></a>
                             <a href="#"><button type="button" class="btn btn-info saveSpotlight">Save</button></a>
@@ -49,19 +71,20 @@
             <ul class="pagination">
                 {% if paginations['previous'] is defined %}
                     <li>
-                        <a href="{{ path('admin_users_list', {'page': paginations['previous']  }) }}?query={{ filters.query }}" aria-label="Previous">
+                        <a href="{{ path('admin_users_list', {'page': paginations['previous']  }) }}?query={{ filters.query }}&role={{ filters.role }}&temporary={{ filters.temporary }}" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                 {% endif %}
                 {% for pagin in range(1, paginations['pageRange']) %}
                     <li>
-                        <a href="{{ path('admin_users_list', {'page': pagin }) }}?query={{ filters.query }}">{{ pagin }}</a>
+                        <a href="{{ path('admin_users_list', {'page': pagin }) }}?query={{ filters.query }}&role={{ filters.role }}&temporary={{ filters.temporary }}">{{ pagin }}</a>
                     </li>
                 {% endfor %}
                 {% if paginations['next'] is defined %}
                     <li>
-                        <a href="{{ path('admin_users_list', {'page': paginations['next']  }) }}?query={{ filters.query }}" aria-label="Next">
+                        <a href="{{ path('admin_users_list', {'page': paginations['next']  }) }}?query={{ filters
+                        .query }}&role={{ filters.role }}&temporary={{ filters.temporary }}" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
