--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/biographySectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/biographySectionEdit.html.twig
@@ -1,5 +1,5 @@
 <section id="biography" class="profile-block biography">
-    {% if is_granted('EDIT', artist) %}
+    {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
     <div class="title"><span>Biography</span><div id="editBiography" class=""><i class="fa fa-pencil-square-o"></i></div></div>
     <pre id="biographyEditable" data-type="textarea" data-pk="{{ artist.id }}" data-title="">
         {{ artist.user.profile.description }}
