--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -1,7 +1,7 @@
 
             {% for performance in performances|reverse %}
 
-            {% if is_granted('EDIT', artist) %}
+            {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
 
                 <article class="item clearfix perfBlockView">
 
