--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
@@ -1,5 +1,5 @@
 
-{% if is_granted('EDIT', artist) %}
+{% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
 
     {% if artist.user.background != '/' %}
         <div class="header-background" style="background-image: url({{ asset(artist.user.background)|imagine_filter('background') }})">
@@ -21,7 +21,7 @@
 {% endif %}
 <span id="slug" class="hidden">{{ artist.slug }}</span>
 <section class="profile-info container">
-    {% if is_granted('EDIT', artist) %}
+    {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
         <div class="avatar avatarEditable">
             <img class="avatar" src="{{ artist.user.avatar }}" alt="Avatar">
             <div id="editAvatar" class="set-avatar"><a href="#" data-toggle="modal" data-target="#changeImageModal"><i class="fa fa-camera" aria-hidden="true"></i></a></div>
@@ -40,7 +40,7 @@
                     </li>
                 {% endfor %}
             </ul>
-            {% if is_granted('EDIT', artist) %}
+            {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
                 <button button="button" class="set-categories">
                 <a href="#" data-toggle="modal" id="editCategories" data-target="#categotiesModal"><i class="fa fa-pencil"></i></a>
                 </button>
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="controls">
-        {% if is_granted('EDIT', artist) %}
+        {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
 
         {% else %}
             <div class="button-gradient follow">
