--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
@@ -12,6 +12,11 @@
                 <label for="querySearch">Search</label>
                 <input type="text" class="form-control" name="query" id="querySearch" placeholder="Search" value="{{ filters.query }}">
             </fieldset>
+            <fieldset class="form-group">
+                <label for="querySearch">UserId</label>
+                <input type="number" class="form-control" name="query" id="userId" placeholder="id" value="{{ filters
+                .userId }}">
+            </fieldset>
             <select class="form-control" id="catMainSel" name="main">
                 <option value="all" selected="selected">All role</option>
                 <option value="client">Client</option>
@@ -71,20 +76,21 @@
             <ul class="pagination">
                 {% if paginations['previous'] is defined %}
                     <li>
-                        <a href="{{ path('admin_users_list', {'page': paginations['previous']  }) }}?query={{ filters.query }}&role={{ filters.role }}&temporary={{ filters.fake }}" aria-label="Previous">
+                        <a href="{{ path('admin_users_list', {'page': paginations['previous']  }) }}?query={{ filters.query }}&role={{ filters.role }}&fake={{ filters.fake }}&userId={{ filters.userId }}" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                 {% endif %}
                 {% for pagin in range(1, paginations['pageRange']) %}
                     <li>
-                        <a href="{{ path('admin_users_list', {'page': pagin }) }}?query={{ filters.query }}&role={{ filters.role }}&temporary={{ filters.fake }}">{{ pagin }}</a>
+                        <a href="{{ path('admin_users_list', {'page': pagin }) }}?query={{ filters.query }}&role={{ filters.role }}&fake={{ filters.fake }}&userId={{ filters.userId }}">{{ pagin }}</a>
                     </li>
                 {% endfor %}
                 {% if paginations['next'] is defined %}
                     <li>
                         <a href="{{ path('admin_users_list', {'page': paginations['next']  }) }}?query={{ filters
-                        .query }}&role={{ filters.role }}&temporary={{ filters.fake }}" aria-label="Next">
+                        .query }}&role={{ filters.role }}&fake={{ filters.fake }}&userId={{ filters.userId }}"
+                           aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                         </a>
                     </li>
